--- a/CompressDemo/AndroidManifest.xml
+++ b/CompressDemo/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.compressdemo"
     android:versionCode="1"
-    android:versionName="1.0" >
-
+    android:versionName="1.0" 
+    android:installLocation="preferExternal" >
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
