--- a/CompressDemo/AndroidManifest.xml
+++ b/CompressDemo/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:targetSdkVersion="18" />
     
 <uses-permission android:name="android.permission.INTERNET" />
-
+<uses-permission android:name="android.permission.GET_TASKS" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
