fix the bug: compresstool can not sign Apk add support for service

--- a/CompressDemo/AndroidManifest.xml
+++ b/CompressDemo/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:name="com.example.compressdemo.SecondActivity"
             android:label="@string/title_activity_second" >
         </activity>
+        
+		<service android:name ="DemoService" >  
+        </service >         
     </application>
 
 </manifest>
