fix bug on sumsung s4 change library load to static in demo wait update:  maybe i will change to java lzma decode, to fix 64bit support problem. now 64bit support is not good enough

--- a/CompressDemo/AndroidManifest.xml
+++ b/CompressDemo/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.compressdemo"
     android:versionCode="1"
     android:versionName="1.0" 
-    android:installLocation="preferExternal" >
+    android:installLocation="auto" >
     
     <uses-sdk
         android:minSdkVersion="8"
